--- a/BlazorTool.Client/Components/AddActivityForm.razor
+++ b/BlazorTool.Client/Components/AddActivityForm.razor
@@ -11,7 +11,7 @@
     <TelerikForm Model="@ActivityModel" OnValidSubmit="@HandleValidSubmit">
         <FormValidation>
             <DataAnnotationsValidator />
-            <TelerikValidationSummary />
+           
         </FormValidation>
     <FormItems>
         <div class="form-layout">
@@ -26,7 +26,9 @@
                                              TextField="@nameof(Person.Name)"
                                              Placeholder="@Localizer["WorkOrder_SelectPerson"]"
                                              Filterable="true"
-                                             ShowClearButton="true">
+                                             ShowClearButton="true"
+                                             
+                                             >
                             </TelerikComboBox>
                         </div>
                         <ValidationMessage For="@(() => ActivityModel.PersonID)" />
@@ -42,7 +44,9 @@
                                          TextField="@nameof(WODict.Name)"
                                          Placeholder="@Localizer["WorkOrder_SelectWOCategory"]"
                                          Filterable="true"
-                                         ShowClearButton="true">
+                                         ShowClearButton="true"
+                                         
+                                                 >
                             </TelerikComboBox>
                         </div>
                         <ValidationMessage For="@(() => ActivityModel.CategoryID)" />
@@ -53,7 +57,7 @@
                     <Template>
                         <div style="display: flex; align-items: center;">
                             <label class="k-label k-form-label" style="min-width: 120px; margin-right: 10px;">@Localizer["ActivityList_Workload"]:</label>
-                            <TelerikNumericTextBox @bind-Value="ActivityModel.WorkLoad" Format="n2" Step="0.25m" Placeholder="@Localizer["ActivityList_Workload_Placeholder"]"/>
+                                <TelerikNumericTextBox @bind-Value="ActivityModel.WorkLoad" Format="n2" Step="0.25m" Placeholder="@Localizer["ActivityList_Workload_Placeholder"]" />
                         </div>
                         <ValidationMessage For="@(() => ActivityModel.WorkLoad)" />
                     </Template>
@@ -65,7 +69,7 @@
                     <Template>
                         <div style="display: flex; align-items: center;">
                             <label class="k-label k-form-label" style="min-width: 120px; margin-right: 10px;">@Localizer["ActivityList_Description"]:</label>
-                            <TelerikTextArea @bind-Value="ActivityModel.Description" Rows="5" Placeholder="@Localizer["ActivityList_Description_Placeholder"]"/>
+                                <TelerikTextArea @bind-Value="ActivityModel.Description" Rows="5" Placeholder="@Localizer["ActivityList_Description_Placeholder"]" />
                         </div>
                         <ValidationMessage For="@(() => ActivityModel.Description)" />
                     </Template>
@@ -136,8 +140,10 @@
     private decimal CalculateDecimalHours(DateTime? takeDate)
     {
         //if 15 minutes = 0.25 hours
-        if (takeDate == null) return 0;
+        if (takeDate == null) return 0.25m;
         var hours = (DateTime.Now - takeDate.Value).TotalHours;
+
+        if (hours < 0.25) return 0.25m;
         return (decimal)hours;
     }
 
