--- a/BlazorTool.Client/Components/WorkOrderComponent.razor
+++ b/BlazorTool.Client/Components/WorkOrderComponent.razor
@@ -161,7 +161,7 @@
                     </div>
                     <div class="field-group">
                             <label>@Localizer[nameof(WorkOrder.TakePersons)]:</label>
-                        <div class="field-value">@(string.IsNullOrEmpty(takePersons) ? @Localizer["WorkOrder_NotSpecified"] : takePersons)</div>
+                        <div class="field-value">@(string.IsNullOrEmpty(WorkOrder.TakePersons) ? @Localizer["WorkOrder_NotSpecified"] : takePersons)</div>
                     </div>
                 </CardBody>
             </TelerikCard>
@@ -280,7 +280,7 @@
         </CardBody>
     </TelerikCard>
 
-    <TelerikWindow @bind-Visible="IsAddActivityWindowVisible" Modal="true" Width="800px">
+    <TelerikWindow @bind-Visible="IsAddActivityWindowVisible" Modal="true" Width="500px">
         <WindowTitle>
                 <strong>@Localizer["WorkOrder_AddActivity"]</strong>
         </WindowTitle>
@@ -316,7 +316,7 @@
     }
     else
     {
-    <p class="error">@Localizer["WorkOrder_NoWorkOrderFound"]@WorkOrder.WorkOrderID</p>
+    <p class="error">@Localizer["WorkOrder_NoWorkOrderFound"]@WorkOrder?.WorkOrderID</p>
     }
 
 </div>
@@ -329,6 +329,7 @@
     [Parameter] public List<string>? ListPersons { get; set; }
     [Parameter] public bool isEditable { get; set; } = false;
     [Parameter] public EventCallback<bool> OnStateChanged { get; set; }
+    [Parameter] public EventCallback<WorkOrder> NeedReloadModel { get; set; }
     [Parameter] public Person? currentUser { get; set; }
     [Parameter] public bool isScheduler { get; set; } = false; // Indicates if this component is used in the scheduler context
     private ActivityList? activityListComponent;
@@ -361,6 +362,11 @@
 
     protected override async Task OnInitializedAsync()
     {
+        await LoadData();
+    }
+
+    private async Task LoadData()
+    {
         isNewWorkOrder = WorkOrder?.WorkOrderID == 0;
         ListDevices = await apiService.GetAllDevicesCachedAsync();
         ListCategories =  apiService.GetWOCategories();
@@ -373,19 +379,7 @@
             DeviceAlarm = string.IsNullOrWhiteSpace(WorkOrder?.AssetNo) ? "bg-warning" : string.Empty;
         }
 
-        var takePersonsIDs = WorkOrder?.TakePersons?.Split('#') ?? Array.Empty<string>();
-        foreach(var id in takePersonsIDs)
-        {
-            if (int.TryParse(id, out int personId) && personId > 0)
-            {
-                var person = apiService.GetPersonByIDCached(personId);
-                if (person != null)
-                {
-                    takePersons += $"{person.Name}, ";
-                }
-            }
-            takePersons = takePersons.TrimEnd(',', ' ');
-        }
+        takePersons = ParseTakePersons(WorkOrder?.TakePersons);
         selectedDevice = ListDevices?.FirstOrDefault(d => d.MachineID == WorkOrder?.MachineID);
 
         if (ListPersons == null )
@@ -429,9 +423,27 @@
         isValidWorkOrder();
     }
 
+    private string ParseTakePersons(string? TakePersons)
+    {
+        var takePersonsIDs = TakePersons?.Split('#') ?? Array.Empty<string>();
+        takePersons = string.Empty;
+        foreach(var id in takePersonsIDs)
+        {
+            if (int.TryParse(id, out int personId) && personId > 0)
+            {
+                var person = apiService.GetPersonByIDCached(personId);
+                if (person != null)
+                {
+                    takePersons += $"{person.Name}, ";
+                }
+            }
+        }
+        takePersons = takePersons.TrimEnd(',', ' ');
+        return takePersons;
+    }
     private async Task HandleActivityAdded(bool success)
     {
-        if (success)
+        if (success) //------------------- NOWA AKTYWNOŚĆ
         {
             IsAddActivityWindowVisible = false;
             // Optionally, refresh the activity list or statistics here
@@ -443,6 +455,7 @@
                 if (updatedWorkOrder != null)
                 {
                     WorkOrder.UpdateFrom(updatedWorkOrder);
+                    // takePersons = ParseTakePersons(WorkOrder?.TakePersons);
                 }
                 var task = activityListComponent?.RefreshActivitiesAsync();
                 if (task != null)
@@ -450,9 +463,9 @@
 
                     await task;
                 }
-            }
-            StateHasChanged();
-            await OnStateChanged.InvokeAsync(true);
+
+                await NeedReloadModel.InvokeAsync(WorkOrder);
+            }            
         }
         else
         {
@@ -465,6 +478,11 @@
         // You might want to show an error message if success is false
     }
 
+    public async Task Refresh()
+    {
+        await LoadData();
+        StateHasChanged();
+    }
 
     #region Event Handlers
     private void OnAssignedPersonChanged(object newValue)
@@ -614,7 +632,7 @@
                string.IsNullOrEmpty(LevelAlarm) &&
                string.IsNullOrEmpty(ReasonAlarm) &&
                isValidDates();
-        OnStateChanged.InvokeAsync(isValid);
+               if (!isValid) OnStateChanged.InvokeAsync(isValid);
         return isValid;
     }
 }
