--- a/BlazorTool.Client/Pages/Home.razor
+++ b/BlazorTool.Client/Pages/Home.razor
@@ -13,27 +13,34 @@
 
 	<TelerikLoaderContainer  Visible="@isDataLoading" Text="@Localizer["Scheduler_LoadingOrders"]" Size="@Telerik.Blazor.ThemeConstants.Loader.Size.Large">
 				</TelerikLoaderContainer>
-	<span class="order-title">@Localizer["Home_MyAssignedOrders"]:</span>
-	<OrdersGrid OrdeForGrid="@myAssignedOrders"
+	<span class="order-title">@Localizer["Home_MyAssignedOrders"]: @myAssignedOrders.Count()</span>
+	<OrdersGrid @key="@assignedGridKey"
+			   OrdeForGrid="@myAssignedOrders"
 			   workOrderStates="@workOrderStates"
+			   @ref="@AssignedGrid"
 			   PageSize = "8"
 			   ShowSearchBar = "false"
+			   OnOrderChanged="@((app) => OnOrderChanged(app))"
 			   />
 </div>
 
 <div class="orders-grid-container">
 		
-	<span class="order-title">@Localizer["Home_MyTakenOrders"]:</span>
-	<OrdersGrid OrdeForGrid="@myTakenWorkOrders"
+	<span class="order-title">@Localizer["Home_MyTakenOrders"]: @myTakenWorkOrders.Count()</span>
+	<OrdersGrid @key="@takenGridKey"
+			   OrdeForGrid="@myTakenWorkOrders"
 			   workOrderStates="@workOrderStates"
+			   @ref="@TakenGrid"
 			   PageSize = "8"
-			   ShowSearchBar = "false"			   />
+			   ShowSearchBar = "false"	
+			   OnOrderChanged="@((app) => OnOrderChanged(app))"
+			   />
 
 </div>
 
 <div class="orders-grid-container">
 <div class="order-header">
-	<span class="order-title">@Localizer["Home_OrdersForDepartment"]: </span>
+	<span class="order-title">@Localizer["Home_OrdersForDepartment"]: @myDepartmentOrders.Count() </span>
 			<TelerikComboBox Data="@allDepartments" TextField="Department"
 							 Placeholder="@Localizer["Scheduler_SelectDepartment"]" Filterable="false"
 							 AllowCustom="false" Value="@selectedDepartment"
@@ -42,12 +49,14 @@
 							 Size="sm">
 			</TelerikComboBox>
 </div>
-	<OrdersGrid OrdeForGrid="@myDepartmentOrders"
+	<OrdersGrid @key="@depsGridKey"
+			   OrdeForGrid="@myDepartmentOrders"
 			   workOrderStates="@workOrderStates"
+			   @ref="@DepsGrid"
 			   PageSize = "10"
 			   ShowSearchBar = "false"
 			   isLoading="@isDataLoading"
-			   
+			   OnOrderChanged="@((app) => OnOrderChanged(app))"
 			   />
 </div>
 
@@ -55,6 +64,12 @@
 	private List<WorkOrder> myAssignedOrders = new List<WorkOrder>();
 	private List<WorkOrder> myDepartmentOrders = new List<WorkOrder>();    
 	private List<WorkOrder> myTakenWorkOrders = new List<WorkOrder>();
+	private OrdersGrid TakenGrid;
+	private OrdersGrid AssignedGrid;
+	private OrdersGrid DepsGrid;
+	private Guid takenGridKey = Guid.NewGuid();
+	private Guid assignedGridKey = Guid.NewGuid();
+	private Guid depsGridKey = Guid.NewGuid();
 	private List<string> workOrderStates = new List<string>();
 	private List<string> allDepartments = new List<string>();
 	private string selectedDepartment = string.Empty;
@@ -66,14 +81,12 @@
 		isDataLoading = true;
 		if (!UserState.IsAuthenticated) return;
 		allOrders = await ApiClient.GetWorkOrdersAsync();
+		allOrders = FilterWorkOrders(allOrders);
 		await ApiClient.GetWODictionaries(UserState.PersonID, UserState.LangCode);
 		allDepartments = ApiClient.GetWODepartments().Select(d=>d.Name).ToList();
 		selectedDepartment = allDepartments.FirstOrDefault() ?? "";
-		myDepartmentOrders = allOrders.Where(o => o.DepName == selectedDepartment).ToList();
-		myAssignedOrders = allOrders.Where(o => o.AssignedPerson == UserState.UserName).ToList();
-		var myTakenWorkOrdersID =await ApiClient.GetWOTakenbyPerson(UserState.PersonID ?? -1);
-		myTakenWorkOrders = allOrders.Where(o => myTakenWorkOrdersID.Contains(o.WorkOrderID)).ToList();
 		workOrderStates = allOrders.Select(o => o.WOState ?? string.Empty).Distinct().ToList();
+		TakeListsOrders();
 		isDataLoading = false;
 	}
 
@@ -84,5 +97,36 @@
 		StateHasChanged();
 	}
 
+	private async Task OnOrderChanged(SchedulerAppointment app)
+	{
+		if (app == null) return;
+		allOrders = await ApiClient.GetWorkOrdersCachedAsync();
+		allOrders = FilterWorkOrders(allOrders);
+		TakeListsOrders();
+		StateHasChanged();
+	}
 
+	private void TakeListsOrders()
+	{
+		myDepartmentOrders = allOrders.Where(o => o.DepName == selectedDepartment).ToList();
+		myAssignedOrders = allOrders.Where(o => o.AssignedPerson == UserState.UserName).ToList();
+		myTakenWorkOrders = allOrders.Where(o => o.CloseDate == null).Where(o => o.TakePersons?.Split('#').Contains(UserState.PersonID.ToString()) ?? false).ToList();
+	}
+	private void ConsoleLogOrder(string listName, List<WorkOrder> orders)
+	{
+		Console.WriteLine($"========== Logging orders for: {listName} ================");
+		foreach (var order in orders)
+		{
+			Console.WriteLine($"Order ID: {order.WorkOrderID}, Title: {order.TakePersons}, State: {order.WOState}");
+		}
+		Console.WriteLine($"========== End of orders for: {listName} ================");
+	}
+
+	private List<WorkOrder> FilterWorkOrders(List<WorkOrder> orders)
+	{
+		return orders
+			.Where(o => o.CloseDate == null)
+			.OrderByDescending(o => o.ModDate)
+            .ToList();
+	}
 }
