Enhance SchedulerPage and implement data protection
- Configured data protection in Program.cs, including key storage and memory caching for improved security and performance.
- Introduced new XML file for data protection key management.

--- a/BlazorTool.Client/Pages/SchedulerPage.razor
+++ b/BlazorTool.Client/Pages/SchedulerPage.razor
@@ -455,6 +455,7 @@
         PersonsNames = allPersons.Select(c => c.Name).ToList();
         PersonsNames.Insert(0, Person.NotAssigned.Name); 
         _allOrders = await apiService.GetWorkOrdersAsync(); //from API, not cache
+        cellStyles = RenderStatesStyle(_allOrders);
         ApptService.ClearAppointments(); //clear cache
         if (!UserState.IsAuthenticated)
         {
