fix minor bug with new WorkOrder

--- a/BlazorTool.Client/Components/WorkOrderComponent.razor
+++ b/BlazorTool.Client/Components/WorkOrderComponent.razor
@@ -632,7 +632,7 @@
                string.IsNullOrEmpty(LevelAlarm) &&
                string.IsNullOrEmpty(ReasonAlarm) &&
                isValidDates();
-               if (!isValid) OnStateChanged.InvokeAsync(isValid);
+               if (isValid) OnStateChanged.InvokeAsync(isValid);
         return isValid;
     }
 }
